[gd_scene load_steps=18 format=2]

[ext_resource path="res://Cenas/cena_Menu/cursor_Mouse.tscn" type="PackedScene" id=1]
[ext_resource path="res://Font/MEGAMAN10.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/ChiKareGo2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Cenas/cena_Menu/cena_Menu.gd" type="Script" id=4]
[ext_resource path="res://Imagens/Menu/CENARIO_MESA_PRESIDENTE.jpg" type="Texture" id=5]
[ext_resource path="res://Imagens/Menu/audio.png" type="Texture" id=6]
[ext_resource path="res://Imagens/Menu/menu_item1.png" type="Texture" id=7]
[ext_resource path="res://Audio/Hino.mp3" type="AudioStream" id=8]
[ext_resource path="res://Imagens/Menu/sem_audio.png" type="Texture" id=9]
[ext_resource path="res://Imagens/Menu/menu_item2.png" type="Texture" id=10]
[ext_resource path="res://Imagens/Menu/INTELIGADOS_2022.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=3]
size = 98
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 63
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/Inteligados2022:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "inteligados"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 5.3, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 1500, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/Inteligados2022:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.2, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4.8, 5.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="cena_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -658, 106 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuItem1" type="Sprite" parent="."]
modulate = Color( 0.0588235, 0.788235, 0.956863, 0.901961 )
position = Vector2( 621, 154 )
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 7 )

[node name="MenuItem2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
position = Vector2( 620, 349 )
rotation = 0.00137282
scale = Vector2( 0.2, 0.12 )
texture = ExtResource( 10 )

[node name="MenuItem3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
position = Vector2( 618, 502 )
rotation = 0.00137282
scale = Vector2( 0.2, 0.12 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="."]
margin_left = 107.0
margin_top = 100.0
margin_right = 1147.0
margin_bottom = 166.0
custom_colors/font_color_shadow = Color( 0.247059, 0.45098, 0.541176, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "EU, PRESIDENTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version_Label" type="Label" parent="."]
visible = false
margin_left = 65.0
margin_top = 610.0
margin_right = 1105.0
margin_bottom = 675.0
custom_fonts/font = SubResource( 2 )
text = "Version 2.2
By Inteligados "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 641.5, 358.25 )
scale = Vector2( 1.05501, 1.06573 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="iniciar_Botao" type="Button" parent="."]
margin_left = 335.0
margin_top = 317.0
margin_right = 935.0
margin_bottom = 377.0
rect_min_size = Vector2( 360, 60 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="start_Label" type="Label" parent="iniciar_Botao"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Novo jogo "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="carregar_Botao" type="Button" parent="."]
margin_left = 331.0
margin_top = 472.0
margin_right = 931.0
margin_bottom = 532.0
rect_min_size = Vector2( 360, 60 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="load_Label" type="Label" parent="carregar_Botao"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Carregar jogo "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuSoundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Button" type="Button" parent="."]
margin_left = 1144.0
margin_top = 25.0
margin_right = 1228.0
margin_bottom = 105.0
rect_scale = Vector2( 1.04041, 1.12146 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1188, 70 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 4 )

[node name="cursor_Mouse" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -4.0
margin_right = 1335.0
margin_bottom = 726.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inteligados2022" type="Sprite" parent="ColorRect"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 647, 363 )
texture = ExtResource( 11 )

[node name="inteligados_logo" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/inteligados = SubResource( 6 )

[connection signal="mouse_entered" from="iniciar_Botao" to="." method="_on_iniciar_Botao_mouse_entered"]
[connection signal="mouse_exited" from="iniciar_Botao" to="." method="_on_iniciar_Botao_mouse_exited"]
[connection signal="pressed" from="iniciar_Botao" to="." method="_on_iniciar_Botao_pressed"]
[connection signal="mouse_entered" from="carregar_Botao" to="." method="_on_carregar_Botao_mouse_entered"]
[connection signal="mouse_exited" from="carregar_Botao" to="." method="_on_carregar_Botao_mouse_exited"]
[connection signal="pressed" from="carregar_Botao" to="." method="_on_carregar_Botao_pressed"]
[connection signal="mouse_entered" from="carregar_Botao/load_Label" to="." method="_on_load_Label_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
